Revert "Atualizacoes no Date Do BackEnd"
This reverts commit a0854a79efd1bf58c5cf732fd6e148272241b21a.